<resources>
    <string name="app_name">HaushaltsappVersion2</string>
    <string-array name="spinner_category">
        <item>Wohnen</item>
        <item>Verkehrsmittel</item>
        <item>Lebensmittel</item>
        <item>Gesundheit</item>
        <item>Freizeit</item>
        <item>Sonstiges</item>
    </string-array>

    <string-array name="spinner_cyclus">
        <item>einmalig</item>
        <item>monatlich</item>
    </string-array>

    <string name="Kat_Lebensmittel">Lebensmittel</string>
    <string name="Kat_Wohnen">Wohnen</string>
    <string name="Kat_Verkehrsmittel">Verkehrsmittel</string>
    <string name="Kat_Gesundheit">Gesundheit</string>
    <string name="Kat_Freizeit">Freizeit</string>
    <string name="Kat_Sonstiges">Sonstiges</string>

    <string name="col0Text">Ausgabe</string>
    <string name="col1Text">Wert</string>
    <string name="col2Text">Datum</string>
    <string name="col3Text">Kategorie</string>
    <string name="col4Text">col4</string>
    <string name="col5Text">col5</string>
</resources>