<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fillable_area"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

        <TableLayout
            android:id="@+id/table_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/col0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/col0Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
                    <!-- android:background="@drawable/tableheaderborder"-->
                <HorizontalScrollView
                    android:id="@+id/tblHeaderhorzScrollView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/tableHeaderScrollContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/col1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/col1Text"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/col2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/col2Text"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/col3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/col3Text"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/col4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/col4Text"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/col5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/col5Text"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </HorizontalScrollView>

            </TableRow>
        </TableLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/fillable_area2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TableLayout
                    android:id="@+id/fixed_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scrollbarStyle="insideOverlay">

                    <TableLayout
                        android:id="@+id/scrollable_part"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />
                </HorizontalScrollView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
